unpackaged/main/default/objects/DCC_Proposal__c/DCC_Proposal__c.object-meta.xml
<CustomObject>
    <label>DCC</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>DCC Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>