unpackaged/main/default/objects/DCC_Proposal__c/fields/Converted_DCC_Value__c.field-meta.xml
<CustomField>
    <fullName>Converted_DCC_Value__c</fullName>
    <formula>Total_Processed_Value__c  *  Eligible_DCC_Value__c  *  Opt_in__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted DCC Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>