unpackaged/main/default/objects/DCC_Proposal__c/fields/DCC_Annual_Eligible_Transactions__c.field-meta.xml
<CustomField>
    <fullName>DCC_Annual_Eligible_Transactions__c</fullName>
    <label>DCC : Annual Eligible Transactions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>