unpackaged/main/default/objects/DCC_Proposal__c/fields/DCC_Conv_Trans__c.field-meta.xml
<CustomField>
    <fullName>DCC_Conv_Trans__c</fullName>
    <formula>DCC_Hit_Rate__c * DCC_Annual_Eligible_Transactions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC : Conv Trans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>