unpackaged/main/default/objects/DCC_Proposal__c/fields/DCC_Converted_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>DCC_Converted_Annual_Value__c</fullName>
    <formula>DCC_Value_Per_Trans__c * DCC_Conv_Trans__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC : Converted Annual Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>