unpackaged/main/default/objects/DCC_Proposal__c/fields/DCC_Hit_Rate__c.field-meta.xml
<CustomField>
    <fullName>DCC_Hit_Rate__c</fullName>
    <label>DCC : Hit Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>