unpackaged/main/default/objects/DCC_Proposal__c/fields/DCC_Probability__c.field-meta.xml
<CustomField>
    <fullName>DCC_Probability__c</fullName>
    <label>DCC Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>