unpackaged/main/default/objects/DCC_Proposal__c/fields/DCC_Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>DCC_Proposed_Solution__c</fullName>
    <label>DCC Proposed Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCC POS</fullName>
            </value>
            <value>
                <fullName>Merchant Services DCC</fullName>
            </value>
            <value>
                <fullName>Merchant Services Acquiring</fullName>
            </value>
            <value>
                <fullName>DCC Incentive Platform</fullName>
            </value>
            <value>
                <fullName>DCC Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>