unpackaged/main/default/objects/DCC_Proposal__c/fields/DCCIDx18__c.field-meta.xml
<CustomField>
    <fullName>DCCIDx18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCCIDx18</label>
    <type>Text</type>
</CustomField>