unpackaged/main/default/objects/DCC_Proposal__c/fields/Eligible_DCC_Value__c.field-meta.xml
<CustomField>
    <fullName>Eligible_DCC_Value__c</fullName>
    <label>Eligible DCC Value %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>