unpackaged/main/default/objects/DCC_Proposal__c/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <label>DCC : GP %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>