unpackaged/main/default/objects/DCC_Proposal__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <label>Markup %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>