unpackaged/main/default/objects/DCC_Proposal__c/fields/Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Opt_in__c</fullName>
    <label>Opt-in %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>