unpackaged/main/default/objects/DCC_Proposal__c/fields/Planet_Margin__c.field-meta.xml
<CustomField>
    <fullName>Planet_Margin__c</fullName>
    <formula>Markup__c - Rebate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>