unpackaged/main/default/objects/DCC_Proposal__c/fields/Rebate__c.field-meta.xml
<CustomField>
    <fullName>Rebate__c</fullName>
    <label>Rebate %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>