unpackaged/main/default/objects/DCC_Proposal__c/fields/Total_DCC_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_DCC_Profit__c</fullName>
    <formula>Converted_DCC_Value__c * Planet_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total DCC Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>