unpackaged/main/default/objects/DCC_Proposal__c/fields/Total_Processed_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Processed_Value__c</fullName>
    <label>Total Processed Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>